--- a/JavaSECodes/bin/.gitignore
+++ b/JavaSECodes/bin/.gitignore
@@ -1,10 +1,1 @@
-/Exercise.class
-/PrimitivTipler.class
-/PrintWays.class
-/StringMisal.class
-/Misal3.class
-/misal5.class
-/VariablesPracticeHome.class
-/Test.class
-/ders4/
-/ders5/
+/Exercises/
