--- a/JavaSECodes/.project
+++ b/JavaSECodes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaSECodes</name>
+	<name>JavaSECodesIlqar</name>
 	<comment></comment>
 	<projects>
 	</projects>
