--- a/projects/javafx/JavaFXComputerIlqar/.classpath
+++ b/projects/javafx/JavaFXComputerIlqar/.classpath
@@ -16,7 +16,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/mysql-connector-java-8.0.13 (1).jar"/>
-	<classpathentry kind="lib" path="libs/controlsfx-11.1.1 (1).jar"/>
+	<classpathentry kind="lib" path="lib/controlsfx-11.1.1 (1).jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.13 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
