--- a/projects/spring/spring-mvc-ilqar/spring-mvc-ilqar/pom.xml
+++ b/projects/spring/spring-mvc-ilqar/spring-mvc-ilqar/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.5</version>
+		<version>2.7.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>az.developia</groupId>
 	<artifactId>spring-mvc-ilqar</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-mvc-ilqar</name>
-	<description>Java9 spring mvc proyekti</description>
+	<description>Java9 spring mvc projekti</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
