--- a/projects/spring/spring-mvc-ilqar/spring-mvc-ilqar/src/main/resources/application.properties
+++ b/projects/spring/spring-mvc-ilqar/spring-mvc-ilqar/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 
-server.port=9999
+server.port=5555
+spring.datasource.url=jdbc:mysql://localhost:3306/java9
+spring.datasource.username=root
+spring.datasource.password=1234
